Merged r13930
svn merge -c 13930 -x -w svn+ssh://svn.dcache.org/data/svn/dCache/trunk